@@ -45,12 +45,20 @@ SEXP Random1(SEXP args)
     R_xlen_t i, n, na;
     ran1 fn = NULL; /* -Wall */
     const char *dn = CHAR(STRING_ELT(getListElement(CAR(args), "name"), 0));
+    SEXPTYPE type = REALSXP;
+
     if (streql(dn, "rchisq")) fn = &rchisq;
     else if (streql(dn, "rexp")) fn = &rexp;
     else if (streql(dn, "rgeom")) fn = &rgeom;
-    else if (streql(dn, "rpois")) fn = &rpois;
+    else if (streql(dn, "rpois")) {
+	type = INTSXP;
+	fn = &rpois;
+    }
     else if (streql(dn, "rt")) fn = &rt;
-    else if (streql(dn, "rsignrank")) fn = &rsignrank;
+    else if (streql(dn, "rsignrank")) {
+	type = INTSXP;
+	fn = &rsignrank;
+    }
     else error(_("invalid arguments"));
 
     args = CDR(args);
@@ -69,25 +77,42 @@ SEXP Random1(SEXP args)
 #endif
     }
     else n = XLENGTH(CAR(args));
-    PROTECT(x = allocVector(REALSXP, n));
+    PROTECT(x = allocVector(type, n));
     if (n == 0) {
 	UNPROTECT(1);
 	return(x);
     }
     na = XLENGTH(CADR(args));
     if (na < 1) {
-	for (i = 0; i < n; i++) REAL(x)[i] = NA_REAL;
+	if (type == INTSXP)
+	    for (i = 0; i < n; i++) INTEGER(x)[i] = NA_INTEGER;
+	else
+	    for (i = 0; i < n; i++) REAL(x)[i] = NA_REAL;
 	warning(_("NAs produced"));
     } else {
 	Rboolean naflag = FALSE;
 	PROTECT(a = coerceVector(CADR(args), REALSXP));
 	GetRNGstate();
-	double *ra = REAL(a), *rx = REAL(x);
+	double *ra = REAL(a);
 	errno = 0;
-	for (R_xlen_t i = 0; i < n; i++) {
-	    if (i % NINTERRUPT) R_CheckUserInterrupt();
-	    rx[i] = fn(ra[i % na]);
-	    if (ISNAN(rx[i])) naflag = TRUE;
+	if (type == INTSXP) {
+	    double rx;
+	    int *ix = INTEGER(x);
+	    for (R_xlen_t i = 0; i < n; i++) {
+		if (i % NINTERRUPT) R_CheckUserInterrupt();
+		rx = fn(ra[i % na]);
+		if (ISNAN(rx)) {
+		    naflag = TRUE;
+		    ix[i] = NA_INTEGER;
+		} else ix[i] = (int) rx;
+	    }
+	} else {
+	    double *rx = REAL(x);
+	    for (R_xlen_t i = 0; i < n; i++) {
+		if (i % NINTERRUPT) R_CheckUserInterrupt();
+		rx[i] = fn(ra[i % na]);
+		if (ISNAN(rx[i])) naflag = TRUE;
+	    }
 	}
 	if (naflag) warning(_("NAs produced"));
 	PutRNGstate();
@@ -105,21 +130,30 @@ SEXP Random2(SEXP args)
     R_xlen_t i, n, na, nb;
     ran2 fn = NULL; /* -Wall */
     const char *dn = CHAR(STRING_ELT(getListElement(CAR(args), "name"), 0));
+    SEXPTYPE type = REALSXP;
+
     if (streql(dn, "rbeta")) fn = &rbeta;
-    else if (streql(dn, "rbinom")) fn = &rbinom;
-    else if (streql(dn, "rcauchy")) fn = &rcauchy;
+    else if (streql(dn, "rbinom")) {
+	type = INTSXP;
+	fn = &rbinom;
+    } else if (streql(dn, "rcauchy")) fn = &rcauchy;
     else if (streql(dn, "rf")) fn = &rf;
     else if (streql(dn, "rgamma")) fn = &rgamma;
     else if (streql(dn, "rlnorm")) fn = &rlnorm;
     else if (streql(dn, "rlogis")) fn = &rlogis;
-    else if (streql(dn, "rnbinom")) fn = &rnbinom;
-    else if (streql(dn, "rnorm")) fn = &rnorm;
+    else if (streql(dn, "rnbinom")) {
+	type = INTSXP;
+	fn = &rnbinom;
+    } else if (streql(dn, "rnorm")) fn = &rnorm;
     else if (streql(dn, "runif")) fn = &runif;
     else if (streql(dn, "rweibull")) fn = &rweibull;
-    else if (streql(dn, "rwilcox")) fn = &rwilcox;
-    else if (streql(dn, "rnchisq")) fn = &rnchisq;
-    else if (streql(dn, "rnbinom_mu")) fn = &rnbinom_mu;
-    else error(_("invalid arguments"));
+    else if (streql(dn, "rwilcox")) {
+	type = INTSXP;
+	fn = &rwilcox;
+    } else if (streql(dn, "rnchisq")) fn = &rnchisq;
+    else if (streql(dn, "rnbinom_mu")) {
+	fn = &rnbinom_mu;
+    } else error(_("invalid arguments"));
 
     args = CDR(args);
     if (!isVector(CAR(args)) ||
@@ -139,7 +173,7 @@ SEXP Random2(SEXP args)
 #endif
     }
     else n = XLENGTH(CAR(args));
-    PROTECT(x = allocVector(REALSXP, n));
+    PROTECT(x = allocVector(type, n));
     if (n == 0) {
 	UNPROTECT(1);
 	return(x);
@@ -147,6 +181,10 @@ SEXP Random2(SEXP args)
     na = XLENGTH(CADR(args));
     nb = XLENGTH(CADDR(args));
     if (na < 1 || nb < 1) {
+	if (type == INTSXP)
+	    for (i = 0; i < n; i++) INTEGER(x)[i] = NA_INTEGER;
+	else
+	    for (i = 0; i < n; i++) REAL(x)[i] = NA_REAL;
 	for (i = 0; i < n; i++) REAL(x)[i] = NA_REAL;
 	warning(_("NAs produced"));
     }
@@ -155,12 +193,26 @@ SEXP Random2(SEXP args)
 	PROTECT(a = coerceVector(CADR(args), REALSXP));
 	PROTECT(b = coerceVector(CADDR(args), REALSXP));
 	GetRNGstate();
-	double *ra = REAL(a), *rb = REAL(b), *rx = REAL(x);
-	errno = 0;
-	for (R_xlen_t i = 0; i < n; i++) {
-	    if (i % NINTERRUPT) R_CheckUserInterrupt();
-	    rx[i] = fn(ra[i % na], rb[i % nb]);
-	    if (ISNAN(rx[i])) naflag = TRUE;
+	double *ra = REAL(a), *rb = REAL(b);
+	if (type == INTSXP) {
+	    int *ix = INTEGER(x); double rx;
+	    errno = 0;
+	    for (R_xlen_t i = 0; i < n; i++) {
+		if (i % NINTERRUPT) R_CheckUserInterrupt();
+		rx = fn(ra[i % na], rb[i % nb]);
+		if (ISNAN(rx)) {
+		    naflag = TRUE;
+		    ix[i] = NA_INTEGER;
+		} else ix[i] = (int) rx;
+	    }
+	} else {
+	    double *rx = REAL(x);
+	    errno = 0;
+	    for (R_xlen_t i = 0; i < n; i++) {
+		if (i % NINTERRUPT) R_CheckUserInterrupt();
+		rx[i] = fn(ra[i % na], rb[i % nb]);
+		if (ISNAN(rx[i])) naflag = TRUE;
+	    }
 	}
 	if (naflag) warning(_("NAs produced"));
 	PutRNGstate();
@@ -193,7 +245,7 @@ SEXP Random3(SEXP args)
 #endif
     }
     else n = XLENGTH(CAR(args));
-    PROTECT(x = allocVector(REALSXP, n));
+    PROTECT(x = allocVector(INTSXP, n));
     if (n == 0) {
 	UNPROTECT(1);
 	return(x);
@@ -208,7 +260,7 @@ SEXP Random3(SEXP args)
     nb = XLENGTH(b);
     nc = XLENGTH(c);
     if (na < 1 || nb < 1 || nc < 1) {
-	for (i = 0; i < n; i++) REAL(x)[i] = NA_REAL;
+	for (i = 0; i < n; i++) INTEGER(x)[i] = NA_INTEGER;
 	warning(_("NAs produced"));
     }
     else {
@@ -217,12 +269,16 @@ SEXP Random3(SEXP args)
 	PROTECT(b = coerceVector(b, REALSXP));
 	PROTECT(c = coerceVector(c, REALSXP));
 	GetRNGstate();
-	double *ra = REAL(a), *rb = REAL(b), *rc = REAL(c), *rx = REAL(x);
+	double *ra = REAL(a), *rb = REAL(b), *rc = REAL(c), rx;
+	int *ix = INTEGER(x);
 	errno = 0;
 	for (R_xlen_t i = 0; i < n; i++) {
 	    if (i % NINTERRUPT) R_CheckUserInterrupt();
-	    rx[i] = fn(ra[i % na], rb[i % nb], rc[i % nc]);
-	    if (ISNAN(rx[i])) naflag = TRUE;
+	    rx = fn(ra[i % na], rb[i % nb], rc[i % nc]);
+	    if (ISNAN(rx)) {
+		naflag = TRUE;
+		ix[i] = NA_INTEGER;
+	    } else ix[i] = (int) rx;
 	}
 	if (naflag) warning(_("NAs produced"));
 
